Test/exceptions/ParseErrors.dfy.expect
ParseErrors.dfy(9,4): Error: number of lhs (2) must match number of rhs (1) for a rhs type (NatOutcome?) with member Extract
ParseErrors.dfy(10,4): Error: The type of the first expression to the right of ':-' could not be determined to be a failure type (got 'int')
ParseErrors.dfy(16,4): Error: number of lhs (0) must be one less than number of rhs (2) for a rhs type (VoidOutcome?) without member Extract
3 resolution/type errors detected in ParseErrors.dfy
